# scriv

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .ignore  .mailmap  .pii_annotations.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .treerc  CHANGELOG.rst  CITATION.cff  MANIFEST.in  Makefile  README.rst  codecov.yml  howto.txt  openedx.yaml  pylintrc  pylintrc_tweaks  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: tests.yml
.tx/: config
changelog.d/: 20191231_nedbat.rst  20200522_1729_nedbat.rst  20200523_2009_nedbat.rst  20200524_1657_nedbat.rst  20200726_1327_nedbat.rst  20200726_1723_nedbat.rst  20200727_1344_nedbat.rst  20200727_1537_nedbat.rst  20200727_1908_nedbat.rst  20200728_145315_nedbat.rst  20200731_093048_nedbat.rst  20200731_125441_nedbat.rst  20200801_073234_nedbat.rst  20200802_185036_nedbat.rst  20200802_185256_nedbat.rst  20200802_185550_nedbat.rst  20200803_064629_nedbat.rst  20200803_072112_nedbat.rst  20200808_192440_nedbat.rst  20200809_073134_nedbat.rst  20200809_132759_nedbat.rst  20200809_150736_nedbat.rst  20200815_140412_nedbat_markdown.rst  20200829_131036_nedbat_docs.rst  20200829_143619_nedbat.rst  20200829_150030_nedbat.rst  20200920_165854_nedbat.rst  20200927_161149_nedbat_toml.rst  20200927_163135_nedbat.rst  20201212_221215_kurtmckee_os_sep.rst  20201212_221749_kurtmckee_os_sep.rst  20201213_140401_kurtmckee_newlines.rst  20201213_160805_nedbat_py36_py37.rst  20210620_190043_nedbat_api.rst  20210622_071634_nedbat_no_travis.rst  20210622_192022_nedbat_replace_31.rst  20210726_064703_nedbat_tomli.rst  20210727_064227_nedbat.rst  20210728_070553_nedbat_format_md_39.rst  20211206_074117_kurtmckee_toml_versions.rst  (+63 more)
docs/: Makefile  commands.rst  concepts.rst  conf.py  configuration.rst  details.rst  extract_includes.py  getting_started.rst  index.rst  internationalization.rst  make.bat  philosophy.rst  testing.rst
docs/include/: collect_help.rst  config.rst  create_help.rst  links.rst
journo/: __init__.py
requirements/: base.in  base.txt  constraints.in  constraints.txt  dev.in  dev.txt  doc.in  doc.txt  pip-tools.txt  quality.in  quality.txt  test.in  test.txt  tox.in  tox.txt  travis.in  travis.txt
scriv/: __init__.py  cli.py  collect.py  config.py  create.py  format.py  format_md.py  format_rst.py  gitinfo.py  shell.py
scriv/templates/: new_entry.rst.j2
src/scriv/: __init__.py  __main__.py  changelog.py  cli.py  collect.py  config.py  create.py  exceptions.py  extras.py  format.py  format_md.py  format_rst.py  ghrel.py  github.py  gitinfo.py  linkcheck.py  literals.py  optional.py  print.py  scriv.py  shell.py  util.py
src/scriv/templates/: entry_title_template.rst.j2  ghrel_template.md.j2  new_entry.md.j2  new_entry.rst.j2  new_fragment.md.j2  new_fragment.rst.j2
tests/: __init__.py  conftest.py  faker.py  helpers.py  test_changelog.py  test_collect.py  test_config.py  test_create.py  test_extras.py  test_faker.py  test_format.py  test_format_md.py  test_format_rst.py  test_ghrel.py  test_github.py  test_gitinfo.py  test_linkcheck.py  test_literals.py  test_models.py  test_print.py  test_process.py  test_util.py
