[metadata]
name = scriv
version = attr: scriv.__version__
description = Scriv changelog management tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/nedbat/scriv
author = Ned Batchelder
author_email = ned@nedbatchelder.com
license = Apache
zip_safe = False
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    scriv
package_dir =
    = src
install_requires =
# begin_install_requires
    attrs
    click
    click-log
    jinja2
# end_install_requires

[options.package_data]
scriv =
    templates/*.*

[options.entry_points]
console_scripts =
    scriv = scriv.cli:cli

[options.extras_require]
toml = tomli

[scriv]
version = literal: src/scriv/__init__.py: __version__
rst_header_chars = -.

[isort]
indent = '    '
line_length = 80
multi_line_output = 3
include_trailing_comma = True

[wheel]
universal = 1

[tool:pytest]
addopts = -rfe
norecursedirs = .* docs requirements

[coverage:run]
branch = True
source =
    scriv
    tests
omit =
    */__main__.py

[coverage:report]
precision = 2

[coverage:paths]
source =
    src
    */site-packages

[mypy]
python_version = 3.6
ignore_missing_imports = True
check_untyped_defs = True

[doc8]
max-line-length = 80

[pycodestyle]
exclude = .git,.tox
max-line-length = 80
; E203 = whitespace before ':'
; W503 line break before binary operator
ignore = E203,W503

[pydocstyle]
; D200 = One-line docstring should fit on one line with quotes
; D203 = 1 blank line required before class docstring
; D212 = Multi-line docstring summary should start at the first line
; D215 = Section underline is over-indented (numpy style)
; D404 = First word of the docstring should not be This (numpy style)
; D405 = Section name should be properly capitalized (numpy style)
; D406 = Section name should end with a newline (numpy style)
; D407 = Missing dashed underline after section (numpy style)
; D408 = Section underline should be in the line following the section’s name (numpy style)
; D409 = Section underline should match the length of its name (numpy style)
; D410 = Missing blank line after section (numpy style)
; D411 = Missing blank line before section (numpy style)
; D412 = No blank lines allowed between a section header and its content (numpy style)
; D413 = Missing blank line after last section (numpy style)
; D414 = Section has no content (numpy style)
ignore = D200,D203,D212,D215,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414
