[metadata]
name = scriv
version = attr: scriv.__version__
description = Scriv changelog management tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/nedbat/scriv
author = Ned Batchelder
author_email = ned@nedbatchelder.com
license = Apache-2.0
zip_safe = False
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    # For some reason, these appear in reverse order on pypi...
    Twitter = https://twitter.com/nedbat
    Funding = https://github.com/sponsors/nedbat
    Issues = https://github.com/nedbat/scriv/issues
    Source = https://github.com/nedbat/scriv
    Documentation = https://scriv.readthedocs.io

[options]
packages =
    scriv
package_dir =
    = src
install_requires =
# begin_install_requires
    attrs
    click
    click-log
    jinja2
    requests
# end_install_requires

[options.package_data]
scriv =
    templates/*.*

[options.entry_points]
console_scripts =
    scriv = scriv.cli:cli

[options.extras_require]
toml = tomli
yaml = pyyaml

[scriv]
version = literal: src/scriv/__init__.py: __version__
rst_header_chars = -.

[isort]
indent = '    '
line_length = 80
multi_line_output = 3
include_trailing_comma = True

[wheel]
universal = 1

[tool:pytest]
addopts = -rfe
norecursedirs = .* docs requirements

[coverage:run]
branch = True
source =
    scriv
    tests
omit =
    */__main__.py

[coverage:report]
precision = 2

[coverage:paths]
source =
    src
    */site-packages

others =
    .
    */scriv

[mypy]
python_version = 3.7
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = True
check_untyped_defs = True
warn_return_any = True

[doc8]
max-line-length = 80

[pycodestyle]
exclude = .git,.tox
max-line-length = 80
; E203 = whitespace before ':'
; W503 line break before binary operator
ignore = E203,W503

[pydocstyle]
; D200 = One-line docstring should fit on one line with quotes
; D203 = 1 blank line required before class docstring
; D212 = Multi-line docstring summary should start at the first line
; D406 = Section name should end with a newline (numpy style)
; D407 = Missing dashed underline after section (numpy style)
; D413 = Missing blank line after last section (numpy style)
ignore = D200,D203,D212,D406,D407,D413
