[metadata]
name = scriv
version = attr: scriv.__version__
description = Scriv changelog management tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/nedbat/scriv
author = Ned Batchelder
author_email = ned@nedbatchelder.com
license = Apache-2.0
zip_safe = False
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    # For some reason, these appear in reverse order on pypi...
    Mastodon = https://hachyderm.io/@nedbat
    Funding = https://github.com/sponsors/nedbat
    Issues = https://github.com/nedbat/scriv/issues
    Source = https://github.com/nedbat/scriv
    Documentation = https://scriv.readthedocs.io

[options]
packages =
    scriv
package_dir =
    = src
python_requires = >= 3.9
install_requires =
# begin_install_requires
    attrs
    click
    click-log
    jinja2>=2.7
    markdown-it-py
    requests
# end_install_requires

[options.package_data]
scriv =
    templates/*.*

[options.entry_points]
console_scripts =
    scriv = scriv.cli:cli

[options.extras_require]
toml =
    tomli; python_version < "3.11"
yaml =
    pyyaml

[scriv]
ghrel_template = file: ghrel_template.md.j2
rst_header_chars = -.
version = literal: src/scriv/__init__.py: __version__

[isort]
indent = '    '
line_length = 80
multi_line_output = 3
include_trailing_comma = True

[tool:pytest]
addopts = -rfe
norecursedirs = .* docs requirements

[coverage:run]
branch = True
source =
    scriv
    tests
omit =
    */__main__.py

[coverage:report]
precision = 2
exclude_also =
    def __repr__

[coverage:paths]
source =
    src
    */site-packages

others =
    .
    */scriv

[mypy]
python_version = 3.9
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true

[doc8]
max-line-length = 80

[pycodestyle]
exclude = .git,.tox
; E203 = whitespace before ':'
; E501 line too long
; W503 line break before binary operator
ignore = E203,E501,W503

[pydocstyle]
; D105 = Missing docstring in magic method
; D200 = One-line docstring should fit on one line with quotes
; D203 = 1 blank line required before class docstring
; D212 = Multi-line docstring summary should start at the first line
; D406 = Section name should end with a newline (numpy style)
; D407 = Missing dashed underline after section (numpy style)
; D413 = Missing blank line after last section (numpy style)
ignore = D105,D200,D203,D212,D406,D407,D413
